# Candidate_DB

./: QUICKSTART.md  Readme.md  architecture.md  docker-compose.yml  future integrations.md  main.py  pyproject.toml
Chatbot/gen_ai/agents/: Agents.md  chat_agent.py  retrieval_agent.py  types.py
Tests/: db_conn.py  intent_tester.py
apis/: __init__.py  main.py
apis/routes/: __init__.py  candidates_api.py  chat_api.py  health_api.py  search_api.py
backend/: __init__.py
backend/agents/: base.py  chat_agent.py  retrieval_agent.py  types.py
backend/evaluator/: LOGGING_GUIDE.md  app_logger.py  events.py
backend/intent/: intent_router.py
backend/llm/: base.py  client.py  config.py  prompt_loader.py  response_parser.py  router.py
backend/retrieval/: search.py
backend/schema/: candidate_schema.py  chat_schema.py  intent_schema.py  search_schema.py
backend/service/: candidate_indexer.py  candidate_service.py  candidate_stats.py  embeddings.py
database/: connection.py  docker-compose.yml  migrate.py
database/migrations/: 001_extensions.sql  002_candidates.sql  003_candidate_documents.sql  004_candidate_profiles.sql  005_vector_index.sql  006_fix_candidate_profiles_fk.sql
docs/api/: api.md
docs/backend/: evaluator.md  interface.md  llm.md  prompts.md  schema.md
docs/dev_notes/: FRONTEND_OPTIONS.md  REORGANIZATION_PROPOSAL.md
frontend/: README.md  package-lock.json  streamlit_app.py
frontend/src/: App.css  App.tsx  index.css
tests/: test_chat_agent.py  test_intent_router.py  test_prompt_loader.py  test_schema_contract.py
(+28 files in other folders)
